--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<option id="o3" value="3">Niebieski</option>
 			<option id="o4" value="4">Afroamerykanin</option>
 			<option id="o5" value="5">Czerwony</option>
+			<option id="o6" value="6">Test</option>
 		</select>
 		<h2>Muzyka:</h2>
 		<select name="sound" id="sound">
